- Added Ctrl+Space shortcut for fuzzy state toggling - Added Ctrl+Shift+U shortcut to focus in pagination unit number control - Added descriptive hints to pagination and other controls - Removed excessive footer margin - Fixed IE button style - Fuzzy button is centered
svn path=/src/trunk/Pootle/; revision=16304

--- a/html/style.css
+++ b/html/style.css
@@ -442,7 +442,6 @@ html[dir="rtl"] #zoom {
     clear: both;
     font-size: 90%;
     margin-top: 2em;
-    margin-bottom: 8em;
 }
 
 #footer-contents
